--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -33,6 +33,7 @@
         android:title="@string/store_locator"></item>
 
     <item
+        android:id="@+id/myOrderFragment"
         android:icon="@drawable/myorders_icon"
         android:title="@string/my_order"></item>
 
