--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#fe3f3f</color>
     <color name="grey">#dddddd</color>
     <color name="colorPrimaryDark">#fe3f3f</color>
-    <color name="colorAccent">#FFFFFFFF</color>
+    <color name="colorAccent">#3f3f3f</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
