--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/colorAccent"></solid>
+        android:color="@color/white"></solid>
     <corners
-        android:radius="10dp"></corners>
+        android:radius="5dp"></corners>
 
 </shape>
