--- a/app/src/main/res/drawable/selected_address_bg.xml
+++ b/app/src/main/res/drawable/selected_address_bg.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:radius="5dp"></corners>
+    <solid
+        android:color="@color/white"></solid>
+    <stroke
+        android:width="2dp"
+        android:color="#8BC34A"></stroke>
 
-</selector>
+</shape>
