--- a/app/src/main/res/layout/address_item.xml
+++ b/app/src/main/res/layout/address_item.xml
@@ -1,6 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="model"
+            type="com.example.neosoftassignmentproject.model.AddAddress" />
+    </data>
+
+    <RelativeLayout
+        android:layout_margin="20px"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="256px">
+
+        <RadioButton
+
+            android:layout_centerVertical="true"
+            android:id="@+id/radioButton"
+            android:buttonTint="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <RelativeLayout
+            android:id="@+id/relative_lt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-18dp"
+            android:layout_toRightOf="@id/radioButton"
+            android:background="@drawable/un_selected_address_bg"
+            android:minHeight="256px">
+
+            <TextView
+                android:id="@+id/address_txt"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/remove_img"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/gotham_book"
+                android:padding="5dp"
+                android:text="@{model._address}"
+                android:textColor="#333333"
+                android:textSize="45px"></TextView>
+
+            <ImageView
+                android:id="@+id/remove_img"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+
+                android:layout_alignParentRight="true"
+                android:padding="8dp"
+                android:src="@drawable/remove_button"></ImageView>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+</layout>
