--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -1,6 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+<variable
+    name="model"
+    type="com.example.neosoftassignmentproject.model.ProductListData" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            loadImg="@{model.product_images}"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/productName_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60px"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/gotham_medium"
+            android:maxLines="1"
+            android:text="@{model.name}"
+            android:textColor="#4f4f4f"
+            android:textSize="45px"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/productCategoryName_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24px"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/gotham_book"
+            android:maxLines="2"
+            android:text="@{model.description}"
+            android:textSize="30px"
+            app:layout_constraintEnd_toEndOf="@+id/productName_txt"
+            app:layout_constraintStart_toStartOf="@+id/productName_txt"
+            app:layout_constraintTop_toBottomOf="@+id/productName_txt" />
+
+        <TextView
+            android:id="@+id/productProducer_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50px"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="60px"
+            android:fontFamily="@font/gotham_medium"
+            android:text="@{String.valueOf(model.cost)}"
+            android:textColor="#fe4040"
+            android:textSize="60px"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
+            app:layout_constraintStart_toStartOf="@+id/productCategoryName_txt"
+            app:layout_constraintTop_toBottomOf="@+id/productCategoryName_txt" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:numStars="5"
+            android:progressTint="#ffba00"
+            android:stepSize="1.0"
+            android:isIndicator="true"
+            android:rating="@{Float.valueOf(model.rating)}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/productProducer_txt" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
