--- a/app/src/main/res/navigation/nav_slide_bar.xml
+++ b/app/src/main/res/navigation/nav_slide_bar.xml
@@ -9,7 +9,11 @@
         android:id="@+id/myCartFragment"
         android:name="com.example.neosoftassignmentproject.MyCartFragment"
         android:label="fragment_my_cart"
-        tools:layout="@layout/fragment_my_cart" />
+        tools:layout="@layout/fragment_my_cart" >
+        <action
+            android:id="@+id/action_myCartFragment_to_addAddressFragment"
+            app:destination="@id/addAddressFragment" />
+    </fragment>
     <fragment
         android:id="@+id/tablesFragment"
         android:name="com.example.neosoftassignmentproject.TablesFragment"
@@ -18,7 +22,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.neosoftassignmentproject.HomeFragment"
-        android:label="HomeFragment" >
+        android:label="NeoStore" >
         <action
             android:id="@+id/action_homeFragment_to_productListFragment"
             app:destination="@id/productListFragment" />
@@ -29,7 +33,62 @@
         android:label="fragment_product_list"
         tools:layout="@layout/fragment_product_list" >
         <argument
+            android:name="product_category_id"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_productListFragment_to_productDetailFragment"
+            app:destination="@id/productDetailFragment" />
+        <argument
+            android:name="name"
+            app:argType="string" />
+<!--        <argument android:name="productDetail" />-->
+    </fragment>
+    <fragment
+        android:id="@+id/productDetailFragment"
+        android:name="com.example.neosoftassignmentproject.ProductDetailFragment"
+        android:label="fragment_product_detail"
+        tools:layout="@layout/fragment_product_detail" >
+        <argument
             android:name="product_id"
             app:argType="string" />
+        <argument
+            android:name="name"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/addAddressFragment"
+        android:name="com.example.neosoftassignmentproject.AddAddressFragment"
+        android:label="fragment_add_address"
+        tools:layout="@layout/fragment_add_address" >
+        <action
+            android:id="@+id/action_addAddressFragment_to_addresslistFragment"
+            app:destination="@id/addresslistFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addresslistFragment"
+        android:name="com.example.neosoftassignmentproject.AddresslistFragment"
+        android:label="fragment_addresslist"
+        tools:layout="@layout/fragment_addresslist" >
+        <action
+            android:id="@+id/action_addresslistFragment_to_myOrderFragment"
+            app:destination="@id/myOrderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/myOrderFragment"
+        android:name="com.example.neosoftassignmentproject.MyOrderFragment"
+        android:label="fragment_my_order"
+        tools:layout="@layout/fragment_my_order" >
+        <action
+            android:id="@+id/action_myOrderFragment_to_orderDetailFragment"
+            app:destination="@id/orderDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderDetailFragment"
+        android:name="com.example.neosoftassignmentproject.OrderDetailFragment"
+        android:label="fragment_order_detail"
+        tools:layout="@layout/fragment_order_detail" >
+        <argument
+            android:name="order_id"
+            app:argType="integer" />
     </fragment>
 </navigation>
